--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -10,5 +10,6 @@
     <string name="button_select_song">&#8230;</string>
     <string name="edittext_hint">Pick song</string>
     <string name="button_add_section">Add Section</string>
+    <string name="button_pause">Pause</string>
 
 </resources>
